<resources>
    <string name="app_name">Mooviest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_no_internet">Log in failed. No internet connection</string>
    <string name="register_no_internet">Register failed. No internet connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="title_activity_login">Sign in</string>
    <string name="swipe">Swipe</string>
    <string name="recommendations">Recommendations</string>
    <string name="my_lists">My lists</string>
    <string name="nav_others">Others</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="feedback">Send suggestions</string>
    <string name="help">Help</string>

    <!-- Strings related to profile -->
    <string name="my_profile">My profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="celebrities">Celebrities</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="username_profile">Username *</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_profile">Email *</string>
    <string name="email">Email</string>
    <string name="born">Born</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>

    <!-- Strings related to login and register -->
    <string name="register_check_errors">Register failed. Please, check fields errors</string>
    <string name="update_profile_check_errors">Update profile failed. Please, check fields errors</string>
    <string name="email_username">Email or username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Log in</string>
    <string name="not_account">Not account yet? Create one</string>
    <string name="already_member">Already a member? Log in</string>
    <string name="create_account">Create account</string>
    <string name="loading">Loading, please wait...</string>
    <string name="username_least">Username must be at least 3 characters</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="password_least">Password must be at least 6 alphanumeric characters</string>
    <string name="password_match">Passwords do not match</string>
    <string name="username_exists">Username already exists. Please try another one</string>
    <string name="email_exists">Email already exists. Please try another one</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <!-- Search Menu -->
    <string name="search">Search</string>
    <string name="search_query_hint">Search film in Mooviest</string>
    <string name="no_movies_found">No movies found with title</string>
    <string name="relevance">RELEVANCE</string>

    <!-- Mooviest Detail -->
    <string name="movie">Movie</string>
    <string name="no_movie_detail">No detail for movie</string>
    <string name="information">Information</string>
    <string name="cast">Cast</string>
    <string name="watch">Watch</string>
    <string name="watch_movies">Watch movies links...</string>
    <string name="synopsis">Synopsis</string>
    <string name="genres">Genres</string>
    <string name="movie_updated">Moved to the selected list successfully</string>

    <!-- Movies List -->
    <string name="more">More</string>
    <string name="classify">Classify</string>
    <string name="favourite_list">Favourites</string>
    <string name="favourite">Favourite</string>
    <string name="seen_list">Seen</string>
    <string name="seen">Seen</string>
    <string name="watchlist_list">Watchlist</string>
    <string name="watchlist">Watchlist</string>
    <string name="blacklist_list">Blacklist</string>
    <string name="blacklist">Blacklist</string>
    <string name="no_movies_list">No movies on this list</string>
</resources>
